Sun Jul 13 01:20:37 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkstuff.conf:
	  - Updated mkstuff.conf to be able to build CVS snapshots.

Sun Jul 13 01:03:48 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/delete.png:
	* data/images/new.png:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* gaim.pro:
	  - Removed the menubar in the accounts window, and added
	    New Account and Delete Account buttons.

Sun Jul 13 00:44:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Removed the menubar completely, and put a nice toolbar in its place.

Sat Jul 12 02:11:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/add.png:
	* data/images/info.png:
	* data/images/new-group.png:
	* data/images/prefs.png:
	* data/images/remove.png:
	* gaim.pro:
	  - Added new toolbar icons.

Fri Jul 11 01:46:30 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Removed the Help menu.

Thu Jul 10 03:40:53 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/protocols/small/gadu-gadu.png:
	* data/images/protocols/small/jabber.c:
	* data/images/protocols/small/trepia.png:
	  - Added more protocol icons.

Thu Jul 10 01:07:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Put the .desktop file in the right directory.

Thu Jul 10 00:45:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* gaim.pro:
	  - Removed the paths specific to my setup for linking.

Wed Jul 09 16:43:04 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Fixed up the ipk building script.

Wed Jul 09 16:34:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	* mkstuff.conf:
	* mktarball.sh:
	  - Added utility scripts to produce an ipkg and tarball.

Wed Jul 02 12:14:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp: